# cogit

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  go.mod
.deps/libgit2/lib/: libgit2.1.5.2.dylib  libgit2.1.5.dylib  libgit2.dylib
.deps/libgit2/lib/pkgconfig/: libgit2.pc
docs/: plan.md
src/: config.rs  main.rs  vimkeys.rs
src/app/: cmdline.rs  commit_dialog.rs  help.rs  keymap.rs  mod.rs  navigation.rs  notification.rs  styles.rs
src/gitops/: branch.rs  commit.rs  ignore.rs  index_ops.rs  merge_rebase.rs  mod.rs  remote.rs  repo.rs  shell.rs  shelve.rs  stash.rs  status.rs  types.rs
src/panels/: branch_panel.rs  cmdbar.rs  console_panel.rs  diffviewer.rs  filelist.rs  filelist_panel.rs  log_panel.rs  mod.rs  rebase_panel.rs  remote_panel.rs  shelve_panel.rs  sidebar.rs  stash_panel.rs
tests/: tmux_test.sh
