[package]
name = "cogit"
version = "0.1.0"
edition = "2024"

[dependencies]
gix = { version = "0.70", features = ["max-performance", "blocking-network-client"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"
regex = "1.11"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
